src/draw/include/scav/scav_draw_c.h


typedef struct scav_metrics scav_metrics;
typedef struct scav_images scav_images;
typedef struct scav_drawlist scav_drawlist;
typedef struct {
  uint32_t stroke_rgba;
  uint32_t fill_rgba;
  int32_t stroke_w;       
  uint32_t dash;          
  int32_t font_size_grid; 
} scav_style;
typedef struct {
  uint32_t kind; 
  int32_t depth;
  uint32_t style;       
  uint32_t clip;        
  uint32_t origin_kind; 
  uint32_t origin_ordinal;
  scav_span points;  
  scav_span payload; 
  int32_t a, b;      
} scav_prim;
scav_result scav_metrics_create(scav_byte const *ttf, uint32_t len, scav_metrics **out);
void scav_metrics_destroy(scav_metrics *metrics);
scav_result scav_metrics_identity(scav_metrics const *metrics, uint32_t *out);
scav_result scav_metrics_units_per_em(scav_metrics const *metrics, uint32_t *out);
scav_result scav_metrics_glyph_count(scav_metrics const *metrics, uint32_t *out);
scav_result scav_measure_text(scav_metrics const *metrics,
                              scav_byte const *utf8_nfc,
                              uint32_t len,
                              int32_t font_size_grid,
                              scav_extent *out,
                              uint32_t out_size);
scav_result scav_line_height(int32_t font_size_grid,
                             int32_t k_num,
                             int32_t k_den,
                             int32_t *out);
scav_result scav_measure_block(scav_metrics const *metrics,
                               scav_byte const *utf8_nfc,
                               uint32_t len,
                               int32_t font_size_grid,
                               int32_t k_num,
                               int32_t k_den,
                               scav_extent *out,
                               uint32_t out_size);
scav_result scav_drawlist_create(scav_drawlist **out);
void scav_drawlist_destroy(scav_drawlist *list);
scav_result scav_drawlist_counts(scav_drawlist const *list,
                                 uint32_t *out_prims,
                                 uint32_t *out_styles,
                                 uint32_t *out_points,
                                 uint32_t *out_clips,
                                 uint32_t *out_text);
scav_result scav_drawlist_prims(scav_drawlist const *list,
                                scav_prim const **out,
                                uint32_t *out_stride,
                                uint32_t *out_count);
scav_result scav_drawlist_styles(scav_drawlist const *list,
                                 scav_style const **out,
                                 uint32_t *out_stride,
                                 uint32_t *out_count);
scav_result scav_drawlist_points(scav_drawlist const *list,
                                 scav_point const **out,
                                 uint32_t *out_stride,
                                 uint32_t *out_count);
scav_result scav_drawlist_clips(scav_drawlist const *list,
                                scav_rect const **out,
                                uint32_t *out_stride,
                                uint32_t *out_count);
scav_result scav_drawlist_str(scav_drawlist const *list,
                              scav_span payload,
                              scav_byte const **out,
                              uint32_t *out_len);
scav_result scav_drawlist_validate(scav_drawlist const *list, uint32_t *out_prim);
scav_result scav_drawlist_canonicalize(scav_drawlist *list);
scav_result scav_drawlist_digest(scav_drawlist const *list,
                                 scav_metrics const *metrics,
                                 uint32_t *out);
scav_result scav_drawlist_append(scav_drawlist *dst, scav_drawlist const *src);
scav_result scav_images_create(scav_images **out);
void scav_images_destroy(scav_images *images);
scav_result scav_image_register(scav_images *images,
                                char const *id,
                                scav_byte const *bytes,
                                uint32_t len,
                                int32_t w,
                                int32_t h,
                                char const *mime);
scav_result scav_image_count(scav_images const *images, uint32_t *out_count);
scav_result scav_image_find(scav_images const *images,
                            scav_byte const *id,
                            uint32_t id_len,
                            uint32_t *out_index);
scav_result scav_image_extent(scav_images const *images,
                              uint32_t index,
                              scav_extent *out,
                              uint32_t out_size);
scav_result scav_emit_chart(scav_drawlist *list,
                            scav_chart const *chart,
                            scav_metrics const *metrics,
                            scav_style const *palette,
                            uint32_t palette_len,
                            uint32_t palette_row_size,
                            scav_spaces const *spaces,
                            uint32_t spaces_size,
                            scav_placed const *placed,
                            uint32_t placed_count,
                            uint32_t placed_row_size,
                            int32_t depth);
scav_result scav_measure_chart(scav_chart const *chart,
                               scav_metrics const *metrics,
                               scav_profile const *profile,
                               uint32_t profile_size,
                               scav_box_space *box_state,
                               uint32_t cap_box_state,
                               uint32_t box_state_row_size,
                               scav_box_space *box_sub,
                               uint32_t cap_box_sub,
                               uint32_t box_sub_row_size,
                               scav_path_clear *path_clear,
                               uint32_t cap_path_clear,
                               uint32_t path_clear_row_size,
                               scav_path_box *path_box,
                               uint32_t cap_path_box,
                               uint32_t path_box_row_size,
                               uint32_t *out_counts);
scav_result scav_palette_standard(scav_style *out, uint32_t cap, uint32_t row_size);