src/core/include/scav/scav_core_c.h


uint32_t scav_abi_version(void);
typedef struct scav_load scav_load;
typedef struct scav_chart scav_chart;
typedef struct {
  scav_span path;
  uint32_t from_doc;
  uint32_t stmt_row;
} scav_pending;
scav_result scav_load_begin(scav_load **out);
scav_result scav_load_add(scav_load *loader,
                          scav_byte const *bytes,
                          uint32_t len,
                          char const *name);
scav_result scav_load_pending(scav_load *loader,
                              scav_pending const **out,
                              uint32_t *out_stride,
                              uint32_t *out_count);
scav_result scav_load_path(scav_load const *loader,
                           scav_span path,
                           scav_byte const **out,
                           uint32_t *out_len);
scav_result scav_load_finish(scav_load *loader, scav_chart **out);
void scav_load_destroy(scav_load *loader);
void scav_chart_destroy(scav_chart *chart);
scav_result scav_load_diag_count(scav_load const *loader, uint32_t *out_count);
scav_result scav_load_diag(scav_load const *loader,
                           uint32_t index,
                           uint32_t *out_code,
                           uint32_t *out_doc,
                           uint32_t *out_off,
                           uint32_t *out_len);
char const *scav_diag_message(uint32_t code);
scav_result scav_load_document_name(scav_load const *loader,
                                    uint32_t doc,
                                    scav_byte const **out,
                                    uint32_t *out_len);
scav_result scav_chart_counts(scav_chart const *chart,
                              uint32_t *out_documents,
                              uint32_t *out_states,
                              uint32_t *out_submachines,
                              uint32_t *out_transitions,
                              uint32_t *out_includes);
scav_result scav_chart_structural_hash(scav_chart const *chart, uint32_t *out);
scav_result scav_chart_digest(scav_chart const *chart,
                              scav_byte *out,
                              uint32_t cap,
                              uint32_t *out_count);
typedef struct {
  uint32_t code; 
  uint32_t subject_kind;
  uint32_t subject_ordinal;
  uint32_t doc;
  uint32_t off, len;
} scav_diag;
scav_result scav_chart_diag_count(scav_chart const *chart, uint32_t *out_count);
scav_result scav_chart_diag(scav_chart const *chart,
                            uint32_t index,
                            scav_diag *out,
                            uint32_t out_size);
typedef uint32_t scav_column_id;
scav_result scav_column_find(scav_chart const *chart,
                             char const *name,
                             scav_column_id *out);
scav_result scav_column_data(scav_chart const *chart,
                             scav_column_id id,
                             scav_byte const **out,
                             uint32_t *out_stride);
scav_result scav_column_count(scav_chart const *chart,
                              scav_column_id id,
                              uint32_t *out_count);
scav_result scav_str(scav_chart const *chart,
                     scav_span ref,
                     scav_byte const **out,
                     uint32_t *out_len);