src/layout/include/scav/scav_layout_c.h


typedef uint32_t scav_router_id;
typedef scav_rect scav_placed;
typedef struct {
  int32_t min_w;    
  int32_t h_before; 
  int32_t h_after;  
} scav_box_space;
typedef struct {
  int32_t src, dst;
} scav_path_clear;
typedef struct {
  uint32_t subject; 
  int32_t w, h;
  uint32_t order; 
} scav_path_box;
typedef struct {
  scav_box_space const *box_state;
  uint32_t n_box_state;
  uint32_t box_state_stride;
  scav_box_space const *box_sub;
  uint32_t n_box_sub;
  uint32_t box_sub_stride;
  scav_path_clear const *path_clear;
  uint32_t n_path_clear;
  uint32_t path_clear_stride;
  scav_path_box const *path_box;
  uint32_t n_path_box;
  uint32_t path_box_stride;
} scav_spaces;
typedef struct {
  int32_t profile_id;      
  int32_t profile_version; 
  int32_t pad; 
  int32_t rank_sep; 
  int32_t node_sep; 
  int32_t sub_sep;  
  int32_t font_size_grid;    
  int32_t line_height_k_num; 
  int32_t line_height_k_den; 
  int32_t kind_min_w[9];
  int32_t kind_min_h[9];
  int32_t dar_num; 
  int32_t dar_den;
  int32_t trybox;      
  int32_t sm_tiebreak; 
  int32_t w_bends;
  int32_t w_corridor;
  int32_t w_crossings;
  int32_t w_excess_len;
  int32_t w_adjacency;
  int32_t w_label;
  int32_t w_label_near; 
  int32_t w_aspect;
  int32_t w_area;
  int32_t portfolio_k;                 
  int32_t portfolio_m;                 
  int32_t sweep_count;                 
  int32_t congestion_iterations;       
  int32_t ripup_cap;                   
  int32_t spacing_inflation_cap;       
  int32_t spacing_inflation_increment; 
  int32_t print_columns; 
} scav_profile;
typedef struct {
  scav_profile profile;
  scav_router_id router;
  uint32_t threads;
} scav_layout_opts;
scav_result scav_profile_named(char const *name, scav_profile *out, uint32_t out_size);
scav_result scav_profile_validate(scav_profile const *profile, uint32_t profile_size);
scav_result scav_layout_run(scav_chart *chart,
                            scav_spaces const *spaces,
                            uint32_t spaces_size,
                            scav_layout_opts const *opts,
                            uint32_t opts_size,
                            scav_placed *placed,
                            uint32_t placed_cap,
                            uint32_t placed_size,
                            uint32_t *out_count);
scav_result scav_router_list(uint32_t *out_count);
scav_result scav_router_name(uint32_t index, scav_byte const **out, uint32_t *out_len);
scav_result scav_router_by_name(scav_byte const *name, uint32_t len, scav_router_id *out);