bindings/python/scav/_abi.py


assert ctypes.sizeof(scav_prim) == 48, "scav_prim is not 48 bytes"
assert ctypes.alignment(scav_prim) == 4
assert getattr(scav_prim, "kind").offset == 0
assert getattr(scav_prim, "depth").offset == 4
assert getattr(scav_prim, "style").offset == 8
assert getattr(scav_prim, "clip").offset == 12
assert getattr(scav_prim, "origin_kind").offset == 16
assert getattr(scav_prim, "origin_ordinal").offset == 20
assert getattr(scav_prim, "points").offset == 24
assert getattr(scav_prim, "payload").offset == 32
assert getattr(scav_prim, "a").offset == 40
assert getattr(scav_prim, "b").offset == 44

class scav_svg_options(ctypes.Structure):
    _fields_ = [
        ("embed_font", ctypes.c_int32),
        ("margin", ctypes.c_int32),
    ]

assert ctypes.sizeof(scav_svg_options) == 8, "scav_svg_options is not 8 bytes"
assert ctypes.alignment(scav_svg_options) == 4
assert getattr(scav_svg_options, "embed_font").offset == 0
assert getattr(scav_svg_options, "margin").offset == 4

scav_placed = scav_rect

def _bind(lib: ctypes.CDLL) -> None:
    lib.scav_abi_version.argtypes = []
    lib.scav_abi_version.restype = ctypes.c_uint32
    lib.scav_load_begin.argtypes = [ctypes.POINTER(ctypes.POINTER(scav_load))]
    lib.scav_load_begin.restype = scav_result
    lib.scav_load_add.argtypes = [ctypes.POINTER(scav_load), ctypes.POINTER(scav_byte), ctypes.c_uint32, ctypes.c_char_p]
    lib.scav_load_add.restype = scav_result
    lib.scav_load_pending.argtypes = [ctypes.POINTER(scav_load), ctypes.POINTER(ctypes.POINTER(scav_pending)), ctypes.POINTER(ctypes.c_uint32)]
    lib.scav_load_pending.restype = scav_result
    lib.scav_load_path.argtypes = [ctypes.POINTER(scav_load), scav_span, ctypes.POINTER(ctypes.POINTER(scav_byte)), ctypes.POINTER(ctypes.c_uint32)]
    lib.scav_load_path.restype = scav_result
    lib.scav_load_finish.argtypes = [ctypes.POINTER(scav_load), ctypes.POINTER(ctypes.POINTER(scav_chart))]
    lib.scav_load_finish.restype = scav_result
    lib.scav_load_destroy.argtypes = [ctypes.POINTER(scav_load)]
    lib.scav_load_destroy.restype = None
    lib.scav_chart_destroy.argtypes = [ctypes.POINTER(scav_chart)]
    lib.scav_chart_destroy.restype = None
    lib.scav_load_diag_count.argtypes = [ctypes.POINTER(scav_load), ctypes.POINTER(ctypes.c_uint32)]
    lib.scav_load_diag_count.restype = scav_result
    lib.scav_load_diag.argtypes = [ctypes.POINTER(scav_load), ctypes.c_uint32, ctypes.POINTER(ctypes.c_uint32), ctypes.POINTER(ctypes.c_uint32), ctypes.POINTER(ctypes.c_uint32), ctypes.POINTER(ctypes.c_uint32)]
    lib.scav_load_diag.restype = scav_result
    lib.scav_diag_message.argtypes = [ctypes.c_uint32]
    lib.scav_diag_message.restype = ctypes.c_char_p
    lib.scav_load_document_name.argtypes = [ctypes.POINTER(scav_load), ctypes.c_uint32, ctypes.POINTER(ctypes.POINTER(scav_byte)), ctypes.POINTER(ctypes.c_uint32)]
    lib.scav_load_document_name.restype = scav_result
    lib.scav_chart_counts.argtypes = [ctypes.POINTER(scav_chart), ctypes.POINTER(ctypes.c_uint32), ctypes.POINTER(ctypes.c_uint32), ctypes.POINTER(ctypes.c_uint32), ctypes.POINTER(ctypes.c_uint32), ctypes.POINTER(ctypes.c_uint32)]
    lib.scav_chart_counts.restype = scav_result
    lib.scav_chart_structural_hash.argtypes = [ctypes.POINTER(scav_chart), ctypes.POINTER(ctypes.c_uint32)]
    lib.scav_chart_structural_hash.restype = scav_result
    lib.scav_chart_digest.argtypes = [ctypes.POINTER(scav_chart), ctypes.POINTER(scav_byte), ctypes.c_uint32, ctypes.POINTER(ctypes.c_uint32)]
    lib.scav_chart_digest.restype = scav_result
    lib.scav_chart_diag_count.argtypes = [ctypes.POINTER(scav_chart), ctypes.POINTER(ctypes.c_uint32)]
    lib.scav_chart_diag_count.restype = scav_result
    lib.scav_chart_diag.argtypes = [ctypes.POINTER(scav_chart), ctypes.c_uint32, ctypes.POINTER(scav_diag)]
    lib.scav_chart_diag.restype = scav_result
    lib.scav_column_find.argtypes = [ctypes.POINTER(scav_chart), ctypes.c_char_p, ctypes.POINTER(scav_column_id)]
    lib.scav_column_find.restype = scav_result
    lib.scav_column_data.argtypes = [ctypes.POINTER(scav_chart), scav_column_id, ctypes.POINTER(ctypes.POINTER(scav_byte)), ctypes.POINTER(ctypes.c_uint32)]
    lib.scav_column_data.restype = scav_result
    lib.scav_column_count.argtypes = [ctypes.POINTER(scav_chart), scav_column_id, ctypes.POINTER(ctypes.c_uint32)]
    lib.scav_column_count.restype = scav_result
    lib.scav_str.argtypes = [ctypes.POINTER(scav_chart), scav_span, ctypes.POINTER(ctypes.POINTER(scav_byte)), ctypes.POINTER(ctypes.c_uint32)]
    lib.scav_str.restype = scav_result
    lib.scav_profile_named.argtypes = [ctypes.c_char_p, ctypes.POINTER(scav_profile)]
    lib.scav_profile_named.restype = scav_result
    lib.scav_profile_validate.argtypes = [ctypes.POINTER(scav_profile)]
    lib.scav_profile_validate.restype = scav_result
    lib.scav_layout_run.argtypes = [ctypes.POINTER(scav_chart), ctypes.POINTER(scav_spaces), ctypes.POINTER(scav_layout_opts), ctypes.POINTER(scav_placed), ctypes.c_uint32, ctypes.POINTER(ctypes.c_uint32)]
    lib.scav_layout_run.restype = scav_result
    lib.scav_router_list.argtypes = [ctypes.POINTER(ctypes.c_uint32)]
    lib.scav_router_list.restype = scav_result
    lib.scav_router_name.argtypes = [ctypes.c_uint32, ctypes.POINTER(ctypes.POINTER(scav_byte)), ctypes.POINTER(ctypes.c_uint32)]
    lib.scav_router_name.restype = scav_result
    lib.scav_router_by_name.argtypes = [ctypes.POINTER(scav_byte), ctypes.c_uint32, ctypes.POINTER(scav_router_id)]
    lib.scav_router_by_name.restype = scav_result
    lib.scav_metrics_create.argtypes = [ctypes.POINTER(scav_byte), ctypes.c_uint32, ctypes.POINTER(ctypes.POINTER(scav_metrics))]
    lib.scav_metrics_create.restype = scav_result
    lib.scav_metrics_destroy.argtypes = [ctypes.POINTER(scav_metrics)]
    lib.scav_metrics_destroy.restype = None
    lib.scav_metrics_identity.argtypes = [ctypes.POINTER(scav_metrics), ctypes.POINTER(ctypes.c_uint32)]
    lib.scav_metrics_identity.restype = scav_result
    lib.scav_metrics_units_per_em.argtypes = [ctypes.POINTER(scav_metrics), ctypes.POINTER(ctypes.c_uint32)]
    lib.scav_metrics_units_per_em.restype = scav_result
    lib.scav_metrics_glyph_count.argtypes = [ctypes.POINTER(scav_metrics), ctypes.POINTER(ctypes.c_uint32)]
    lib.scav_metrics_glyph_count.restype = scav_result
    lib.scav_measure_text.argtypes = [ctypes.POINTER(scav_metrics), ctypes.POINTER(scav_byte), ctypes.c_uint32, ctypes.c_int32, ctypes.POINTER(scav_extent)]
    lib.scav_measure_text.restype = scav_result
    lib.scav_line_height.argtypes = [ctypes.c_int32, ctypes.c_int32, ctypes.c_int32, ctypes.POINTER(ctypes.c_int32)]
    lib.scav_line_height.restype = scav_result
    lib.scav_measure_block.argtypes = [ctypes.POINTER(scav_metrics), ctypes.POINTER(scav_byte), ctypes.c_uint32, ctypes.c_int32, ctypes.c_int32, ctypes.c_int32, ctypes.POINTER(scav_extent)]
    lib.scav_measure_block.restype = scav_result
    lib.scav_drawlist_create.argtypes = [ctypes.POINTER(ctypes.POINTER(scav_drawlist))]
    lib.scav_drawlist_create.restype = scav_result
    lib.scav_drawlist_destroy.argtypes = [ctypes.POINTER(scav_drawlist)]
    lib.scav_drawlist_destroy.restype = None
    lib.scav_drawlist_counts.argtypes = [ctypes.POINTER(scav_drawlist), ctypes.POINTER(ctypes.c_uint32), ctypes.POINTER(ctypes.c_uint32), ctypes.POINTER(ctypes.c_uint32), ctypes.POINTER(ctypes.c_uint32), ctypes.POINTER(ctypes.c_uint32)]
    lib.scav_drawlist_counts.restype = scav_result
    lib.scav_drawlist_prims.argtypes = [ctypes.POINTER(scav_drawlist), ctypes.POINTER(ctypes.POINTER(scav_prim)), ctypes.POINTER(ctypes.c_uint32)]
    lib.scav_drawlist_prims.restype = scav_result
    lib.scav_drawlist_styles.argtypes = [ctypes.POINTER(scav_drawlist), ctypes.POINTER(ctypes.POINTER(scav_style)), ctypes.POINTER(ctypes.c_uint32)]
    lib.scav_drawlist_styles.restype = scav_result
    lib.scav_drawlist_points.argtypes = [ctypes.POINTER(scav_drawlist), ctypes.POINTER(ctypes.POINTER(scav_point)), ctypes.POINTER(ctypes.c_uint32)]
    lib.scav_drawlist_points.restype = scav_result
    lib.scav_drawlist_clips.argtypes = [ctypes.POINTER(scav_drawlist), ctypes.POINTER(ctypes.POINTER(scav_rect)), ctypes.POINTER(ctypes.c_uint32)]
    lib.scav_drawlist_clips.restype = scav_result
    lib.scav_drawlist_str.argtypes = [ctypes.POINTER(scav_drawlist), scav_span, ctypes.POINTER(ctypes.POINTER(scav_byte)), ctypes.POINTER(ctypes.c_uint32)]
    lib.scav_drawlist_str.restype = scav_result
    lib.scav_drawlist_validate.argtypes = [ctypes.POINTER(scav_drawlist), ctypes.POINTER(ctypes.c_uint32)]
    lib.scav_drawlist_validate.restype = scav_result
    lib.scav_drawlist_canonicalize.argtypes = [ctypes.POINTER(scav_drawlist)]
    lib.scav_drawlist_canonicalize.restype = scav_result
    lib.scav_drawlist_digest.argtypes = [ctypes.POINTER(scav_drawlist), ctypes.POINTER(scav_metrics), ctypes.POINTER(ctypes.c_uint32)]
    lib.scav_drawlist_digest.restype = scav_result
    lib.scav_drawlist_append.argtypes = [ctypes.POINTER(scav_drawlist), ctypes.POINTER(scav_drawlist)]
    lib.scav_drawlist_append.restype = scav_result
    lib.scav_images_create.argtypes = [ctypes.POINTER(ctypes.POINTER(scav_images))]
    lib.scav_images_create.restype = scav_result
    lib.scav_images_destroy.argtypes = [ctypes.POINTER(scav_images)]
    lib.scav_images_destroy.restype = None
    lib.scav_image_register.argtypes = [ctypes.POINTER(scav_images), ctypes.c_char_p, ctypes.POINTER(scav_byte), ctypes.c_uint32, ctypes.c_int32, ctypes.c_int32, ctypes.c_char_p]
    lib.scav_image_register.restype = scav_result
    lib.scav_image_count.argtypes = [ctypes.POINTER(scav_images), ctypes.POINTER(ctypes.c_uint32)]
    lib.scav_image_count.restype = scav_result
    lib.scav_image_find.argtypes = [ctypes.POINTER(scav_images), ctypes.POINTER(scav_byte), ctypes.c_uint32, ctypes.POINTER(ctypes.c_uint32)]
    lib.scav_image_find.restype = scav_result
    lib.scav_image_extent.argtypes = [ctypes.POINTER(scav_images), ctypes.c_uint32, ctypes.POINTER(scav_extent)]
    lib.scav_image_extent.restype = scav_result
    lib.scav_emit_chart.argtypes = [ctypes.POINTER(scav_drawlist), ctypes.POINTER(scav_chart), ctypes.POINTER(scav_metrics), ctypes.POINTER(scav_style), ctypes.c_uint32, ctypes.POINTER(scav_spaces), ctypes.POINTER(scav_placed), ctypes.c_uint32, ctypes.c_int32]
    lib.scav_emit_chart.restype = scav_result
    lib.scav_measure_chart.argtypes = [ctypes.POINTER(scav_chart), ctypes.POINTER(scav_metrics), ctypes.POINTER(scav_profile), ctypes.POINTER(scav_box_space), ctypes.c_uint32, ctypes.POINTER(scav_box_space), ctypes.c_uint32, ctypes.POINTER(scav_path_clear), ctypes.c_uint32, ctypes.POINTER(scav_path_box), ctypes.c_uint32, ctypes.POINTER(ctypes.c_uint32)]
    lib.scav_measure_chart.restype = scav_result
    lib.scav_palette_standard.argtypes = [ctypes.POINTER(scav_style), ctypes.c_uint32]
    lib.scav_palette_standard.restype = scav_result
    lib.scav_svg_write.argtypes = [ctypes.POINTER(scav_drawlist), ctypes.POINTER(scav_metrics), ctypes.POINTER(scav_images), ctypes.POINTER(scav_svg_options), ctypes.POINTER(scav_byte), ctypes.c_uint32, ctypes.POINTER(ctypes.c_uint32)]
    lib.scav_svg_write.restype = scav_result
    lib.scav_svg_bounds.argtypes = [ctypes.POINTER(scav_drawlist), ctypes.POINTER(scav_rect)]
    lib.scav_svg_bounds.restype = scav_result


def load(library: str | Path | None = None) -> ctypes.CDLL:
    """Bind every entry point on a freshly loaded library.
